added a to-do app

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,5 +57,6 @@
     <li><a class="dropdown-item" href="#">Separated link</a></li>
   </ul>
 </div>
+<script href="app.js"></script>
 </body>
 </html>
