--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sliding images!</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div id="modal-container">
@@ -30,7 +31,7 @@
         
     </section>
     
-
-    <script src="index.js"></script>
+    <script src="{{ url_for('static', filename='index.js') }}"></script>
+    <!-- <script src="index.js"></script> -->
 </body>
 </html>
