--- a/style.css
+++ b/style.css
@@ -1,100 +1,77 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-@font-face {
-    font-family: pixeboy;
-    src: url('pixeboy.ttf');
-}
-
-.image {
-    transition: filter 0.3s ease-in-out;
-}
-.image.desaturated {
-    filter: grayscale(100%);
-}
-
 body {
-    min-height: 100vh;
-    background-color: rgb(36, 33, 33);
-    overflow: hidden;
-}
-
-#image-track > .image {
-    width: 40vmin;
-    height: 56vmin;
-    object-fit: cover;
-    object-position: 50% 50%;
-}
-
-#image-track > .image:not(:hover) {
-    filter: grayscale(100%);
-}
-
-#image-track > .image:hover {
-    filter: none; /* Remove the grayscale filter on hover */
+  height: 100vh;
+  width: 100vw;
+  background-color: black;
+  margin: 0rem;
+  overflow: hidden;
 }
 
 #image-track {
-    display: flex;
-    gap: 4vmin;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(0, -50%);
+  display: flex;
+  gap: 4vmin;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(0%, -50%); 
+  user-select: none; /* -- Prevent image highlighting -- */
 }
 
-#header {
-    text-align: center;
-    padding: 5px;
-    background-color: rgb(36, 33, 33);
-    color: rgb(255, 255, 255);
-    z-index: 1;
-    position: relative;
+#image-track > .image {
+  width: 40vmin;
+  height: 56vmin;
+  object-fit: cover;
+  object-position: 100% center;
 }
 
-#header h1 {
-    font-family: pixeboy;
-    font-size: 4.5rem;
-    margin-bottom: 10px;
+/* -- YouTube Link Styles -- */
+
+body.menu-toggled > .meta-link > span {
+  color: rgb(30, 30, 30);
 }
 
-#header p {
-    font-size: 4rem;
+#source-link {
+  bottom: 60px;
 }
 
-#modal-container {
-    display: none;
-    position: fixed;
-    z-index: 999;
-    background-color: rgba(0, 0, 0, 0.9);
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
+#source-link > i {
+  color: rgb(94, 106, 210);
 }
 
-#modal-content {
-    text-align: center;
-    position: relative;
-    margin: 10% auto;
-    padding: 20px;
-    width: 80%;
+#yt-link > i {
+  color: rgb(239, 83, 80);
 }
 
-#modal-image {
-    max-width: 100%;
-    max-height: 80vh;
+.meta-link {
+  align-items: center;
+  backdrop-filter: blur(3px);
+  background-color: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 6px;
+  bottom: 10px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+  cursor: pointer;  
+  display: inline-flex;
+  gap: 5px;
+  left: 10px;
+  padding: 10px 20px;
+  position: fixed;
+  text-decoration: none;
+  transition: background-color 400ms, border-color 400ms;
+  z-index: 10000;
 }
 
-#close-modal {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: white;
-    font-size: 30px;
-    cursor: pointer;
+.meta-link:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.meta-link > i, .meta-link > span {
+  height: 20px;
+  line-height: 20px;
+}
+
+.meta-link > span {
+  color: white;
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
 }
