--- a/style.css
+++ b/style.css
@@ -75,3 +75,4 @@ body.menu-toggled > .meta-link > span {
   font-family: "Rubik", sans-serif;
   font-weight: 500;
 }
+//This is a website which focuses on beautiful images and animations...come, visit and enjoy the website...
